# geocode-api

./: README.md  pyproject.toml  start.sh
geocode/: cli.py  core.py  main.py  search.py
geocode/api/: main.py
geocode/api/v1/: main.py
geocode/api/v1/docs/v1_search/: search.md
geocode/api/v1/endpoints/: search.py
geocode/api/v1/serializers/: location.py
geocode/cli/: main.py
geocode/core/: geocode.py
requests/: address_searching.http  search.http
test/: test_search.py
