[tool.poetry]
name = "geocode"
version = "0.1.0"
description = ""
authors = ["Dalmo Felipe <dalmo.felipe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.3.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pyclean = "^2.6.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
